--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <!-- _layouts/distill.html -->
 <html>
   <head>
-    {%- include head.html %}
-
-    {% include scripts/jquery.html %}
-    {% include scripts/mathjax.html %}
+    {%- include head.html %} {% include scripts/jquery.html %} {% include scripts/mathjax.html %}
     <!-- Distill js -->
     <script src="{{ '/assets/js/distillpub/template.v2.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/distillpub/transforms.v2.js' | relative_url }}"></script>
@@ -18,7 +15,7 @@
     {%- endif %}
   </head>
 
-<!-- 
+  <!-- 
   <d-front-matter>
     <script async type="text/json">{
       "title": "{{ page.title }}",
@@ -57,13 +54,11 @@
 -->
 
   <body class="{%- if site.navbar_fixed -%}fixed-top-nav{%- endif -%} {%- unless site.footer_fixed -%}sticky-bottom-footer{%- endunless -%}">
-
     <!-- Header -->
     <!--{%- include header.html %}-->
 
     <!-- Content -->
     <div class="post distill">
-
       <d-title>
         <h1>{{ page.title }}</h1>
         <p>{{ page.description }}</p>
@@ -75,7 +70,7 @@
         {% if page.toc -%}
         <d-contents>
           <nav class="l-text figcaption">
-          <h3>Contents</h3>
+            <h3>Contents</h3>
             {% for section in page.toc -%}
             <div><a href="#{{ section.name | slugify }}">{{ section.name }}</a></div>
             {% if section.subsections -%}
@@ -84,23 +79,18 @@
               <li><a href="#{{ subsection.name | slugify }}">{{ subsection.name }}</a></li>
               {% endfor %}
             </ul>
-            {%- endif -%}
-            {%- endfor %}
+            {%- endif -%} {%- endfor %}
           </nav>
         </d-contents>
-        {%- endif %}
-
-        {{ content }}
+        {%- endif %} {{ content }}
       </d-article>
 
       <d-appendix>
         <d-footnote-list></d-footnote-list>
         <d-citation-list></d-citation-list>
       </d-appendix>
-
     </div>
 
-    
     <!-- Footer -->
     <!--
     {%- include footer.html %}
@@ -110,6 +100,5 @@
     {% include scripts/bootstrap.html %}
     {% include scripts/analytics.html %} 
     -->
-
   </body>
 </html>
